--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -11,7 +11,9 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="130dp"
+            android:paddingTop="200dp">
 
             <Button
                 android:id="@+id/btn_MisLugares"
@@ -34,7 +36,9 @@
         <TableRow
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingLeft="130dp"
+            android:paddingTop="10dp">
 
             <Button
                 android:id="@+id/button3"
@@ -51,10 +55,6 @@
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
                 android:text="@string/btnSalir" />
-
-
         </TableRow>
-
-
     </TableLayout>
 </LinearLayout>
