--- a/app/src/main/res/xml/main_preferences.xml
+++ b/app/src/main/res/xml/main_preferences.xml
@@ -1,18 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <EditTextPreference
-        android:defaultValue="Default value"
-        android:key="maxLugares"
-        android:selectAllOnFocus="true"
-        android:singleLine="true"
-        android:title="Maximo de lugares a mostrar"
-        android:summary="Limita en número de valores que se muestran" />
-    <ListPreference
-        android:defaultValue="1"
-        android:entries="@array/listaCriterios_entries"
-        android:entryValues="@array/listaCriterios_values"
-        android:key="ListaCriterios"
-        android:title="Criterio de ordenación"
-        android:summary="Qué lugares quieres que aparezcan antes" />
+    <PreferenceCategory android:title="Fuente">
+        <EditTextPreference
+            android:key="textSize"
+            android:title="Tamaño de fuente"
+            android:inputType="number"
+            android:dialogTitle="Escriba el tamaño de la fuente"
+            android:summary="Cambiar el tamaño de la fuente"
+            android:defaultValue="14"
+            android:selectAllOnFocus="true"
+            />
+        <CheckBoxPreference
+            android:key="boldStyle"
+            android:title="Negrita"
+            android:summary="Mostrar letras en negrita"
+            android:defaultValue="false"
+            />
+        <CheckBoxPreference
+            android:key="italicStyle"
+            android:title="Cursiva"
+            android:summary="Mostrar letras en cursiva"
+            android:defaultValue="false"
+            />
+    </PreferenceCategory>
+
+    <PreferenceCategory android:title="Colores">
+
+        <ListPreference
+            android:key="textColor"
+            android:title="Color del texto"
+            android:entries="@array/colores_spinner"
+            android:entryValues="@array/colores_spinner"
+            android:defaultValue="Negro"/>
+
+        <ListPreference
+            android:key="backgroundColor"
+            android:title="Color de fondo"
+            android:entries="@array/colores_spinner"
+            android:entryValues="@array/colores_spinner"
+            android:defaultValue="Blanco"/>
+    </PreferenceCategory>
 </PreferenceScreen>
