--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -24,7 +24,7 @@
                 android:text="@string/btnMisLugares" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn_Preferencias"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
@@ -41,7 +41,7 @@
             android:paddingTop="10dp">
 
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/btn_Acerca_de"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
@@ -49,7 +49,7 @@
                 android:text="@string/btnAcerca" />
 
             <Button
-                android:id="@+id/button4"
+                android:id="@+id/btn_Salir"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
