--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contenedor"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -22,20 +23,20 @@
             android:text="@string/btnMisLugares" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/btn_Preferencias"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="lanzarPreferencias"
             android:text="@string/btnPreferencias" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/btn_Acerca_de"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/btnAcerca" />
 
         <Button
-            android:id="@+id/button4"
+            android:id="@+id/btn_Salir"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/btnSalir" />
