--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/contenedor"
     android:orientation="vertical">
 
     <TableLayout
@@ -13,7 +14,8 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="130dp"
-            android:paddingTop="200dp">
+            android:paddingTop="100dp"
+            android:paddingStart="130dp">
 
             <Button
                 android:id="@+id/btn_MisLugares"
@@ -29,6 +31,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
+                android:onClick="lanzarPreferencias"
                 android:text="@string/btnPreferencias" />
 
         </TableRow>
@@ -38,12 +41,14 @@
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:paddingLeft="130dp"
-            android:paddingTop="10dp">
+            android:paddingTop="10dp"
+            android:paddingStart="130dp">
 
             <Button
                 android:id="@+id/btn_Acerca_de"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="lanzarAcercaDe"
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
                 android:text="@string/btnAcerca" />
@@ -57,4 +62,4 @@
                 android:text="@string/btnSalir" />
         </TableRow>
     </TableLayout>
-</LinearLayout>
+</androidx.core.widget.NestedScrollView>
