--- a/app/src/main/res/xml/main_preferences.xml
+++ b/app/src/main/res/xml/main_preferences.xml
@@ -41,4 +41,23 @@
             android:entryValues="@array/colores_spinner"
             android:defaultValue="Blanco"/>
     </PreferenceCategory>
+    <SwitchPreference
+        android:defaultValue="false"
+        android:key="notificaciones"
+        android:title="Mandar notificaciones"
+        android:summary="Notificar si estamos cerca de un lugar"/>
+    <EditTextPreference
+        android:defaultValue="12"
+        android:key="maximo"
+        android:selectAllOnFocus="true"
+        android:singleLine="true"
+        android:title="Maximo de lugares a mostrar"
+        android:summary="Limita en numero de valores que se muestran"/>
+    <ListPreference
+        android:defaultValue="0"
+        android:entries="@array/listaCriterios_entries"
+        android:entryValues="@array/listaCriterios_values"
+        android:key="orden"
+        android:title="Criterios de ordenacion"
+        android:summary="Que lugares quieres que aparezcan"/>
 </PreferenceScreen>
