--- a/app/src/main/res/layout-land/content_main.xml
+++ b/app/src/main/res/layout-land/content_main.xml
@@ -23,6 +23,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="30dp"
                 android:layout_marginRight="30dp"
+                android:onClick="lanzarLugares"
                 android:text="@string/btnMisLugares" />
 
             <Button
