--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -20,6 +20,7 @@
             android:id="@+id/btn_MisLugares"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="lanzarLugares"
             android:text="@string/btnMisLugares" />
 
         <Button
