--- a/app/src/main/res/layout/activity_vista_lugares.xml
+++ b/app/src/main/res/layout/activity_vista_lugares.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".modelo.VistaLugares">
+    android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -179,8 +178,11 @@
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                android:layout_width="295dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:numStars="5"
+                android:stepSize="0.1"
+                android:isIndicator="true"
                 android:layout_gravity="center" />
 
             <FrameLayout
