--- a/app/src/main/res/layout/activity_lista_lugares.xml
+++ b/app/src/main/res/layout/activity_lista_lugares.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".modelo.ListaLugaresActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listview"/>
+
+    <TextView
+        android:id="@+id/txtNoHayElementos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No hay lugares" />
+</RelativeLayout>
