--- a/app/src/main/res/layout/activity_lista_lugares.xml
+++ b/app/src/main/res/layout/activity_lista_lugares.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,11 +9,13 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listview"/>
+        android:id="@android:id/list"
+        android:drawSelectorOnTop="false"
+        />
 
-    <TextView
-        android:id="@+id/txtNoHayElementos"
+    <!--<TextView
+        android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="No hay lugares" />
-</RelativeLayout>
+        android:text="No hay lugares" />-->
+</FrameLayout>
